2018-04-24 Fixed problem with size of popup
2018-04-23 Added 'Enable scroll on mobile' property to the Text Selection addon
2018-04-18 Fixed problem with check answers mode of gaps in the Table addon
2018-04-17 Fixed problem with empty XML tag in page progress configuration
2018-04-16 Fixed problem with CORS in popup addon.
2018-04-13 Added option to select the language used in gaps ant alt texts in Text, Choice, Connection and Ordering modules
2018-04-12 Fixed problem with <> symbols in Text draggable gap
2018-04-11 Fixed problem with video on IE 11
2018-04-09 Fixed a problem with WCAG mode sometimes turning off on page change.
2018-04-03 Fixed problem with rotating ruler in IWB Toolbar module.
2018-03-28 Added property to vertically center the answer in Quiz module. Added headers-of-answers class to posibility to style headers of answers in Quiz module.
2018-03-28 Added checking for permissions to modify top window in glossary
2018-03-26 Added classes while checking answer in Pseduo Code Console. Fixed problem with exceptions translations in pseudo code console.
2018-03-23 Added game mode to board game. Added new addon dice. Added validation utils.
2018-03-22 Added "video-poster-pause" CSS class to "video-poster-play" element on pause and removing it on stop
2018-03-20 Fixed problem with eKeyboard removing event handlers
2018-03-20 Fixed problem with showing answers in gaps
2018-03-20 Added calling show answer on enter press event
2018-03-20 Added keyboard navigation to Text Selection addon
2018-03-19 Added Alt Text in Text, Ordering, Connection and Choice modules
2018-03-16 Added current-page class in icon+list display type in Table of Contents module
2018-03-13 Added new property - "Is Disabled" to Image Identification module
2018-03-13 Added TTS support for Navigation Bar
2018-03-13 Added TTS support for Page Counter
2018-03-13 Added fix in Page Progress Panel
2018-03-12 Added minus errors scoring type for modules group