@@ -1,3 +1,4 @@
+2018-04-24 Added show and hide commands to Page Counter addon.
 2018-04-24 Fixed problem with size of popup
 2018-04-23 Added 'Enable scroll on mobile' property to the Text Selection addon
 2018-04-18 Fixed problem with check answers mode of gaps in the Table addon
